foundation-objs/main/default/objects/Product_And_SKU_Mapping__mdt/Product_And_SKU_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Product And SKU Mapping</label>
    <pluralLabel>Product And SKU Mappings</pluralLabel>
</CustomObject>