foundation-objs/main/default/objects/Product_And_SKU_Mapping__mdt/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Infor LN</fullName>
            </value>
            <value>
                <fullName>JD Edwards</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics 365</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics 365 Business Central</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics 365 Finance and Operations</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics AX</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics CRM</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics NAV</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics SL</fullName>
            </value>
            <value>
                <fullName>Microsoft Others</fullName>
            </value>
            <value>
                <fullName>Oracle E-Business Suite</fullName>
            </value>
            <value>
                <fullName>Oracle Fusion</fullName>
            </value>
            <value>
                <fullName>Oracle NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle Others</fullName>
            </value>
            <value>
                <fullName>Oracle PeopleSoft</fullName>
            </value>
            <value>
                <fullName>SAP B1</fullName>
            </value>
            <value>
                <fullName>SAP Business One</fullName>
            </value>
            <value>
                <fullName>SAP ECC / S4 Hana</fullName>
            </value>
            <value>
                <fullName>SAP Others</fullName>
            </value>
            <value>
                <fullName>Tally ERP 9</fullName>
            </value>
            <value>
                <fullName>Tally Others</fullName>
            </value>
            <value>
                <fullName>TallyPrime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>