foundation-objs/main/default/objects/Product_And_SKU_Mapping__mdt/fields/SLA_In_Weeks__c.field-meta.xml
<CustomField>
    <fullName>SLA_In_Weeks__c</fullName>
    <label>SLA In Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>