foundation-objs/main/default/objects/Product_And_SKU_Mapping__mdt/fields/SOW_Drive_Links__c.field-meta.xml
<CustomField>
    <fullName>SOW_Drive_Links__c</fullName>
    <label>SOW Drive Links</label>
    <type>Url</type>
</CustomField>